총명 #02 memberManger 기능 전체구현
검색,페이징처리,삭제,선택삭제 구현

--- a/SAW_GOOD/src/main/webapp/resources/css/admin/style.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/admin/style.css
@@ -8209,8 +8209,8 @@ h1, h2, h3, h4, h5,
 #sidebar {
   min-width: 270px;
   max-width: 270px;
-  background:url(../images/sidebar.jpg);
-  color: #fff;
+  background:url(../resources/images/sidebar.jpg);
+  color: black;
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
   transition: all 0.3s;
