--- a/SAW_GOOD/src/main/webapp/resources/css/common/base.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/common/base.css
@@ -52,7 +52,7 @@
     }
     /* 초기화  */
     
-    
+   /*  
     
     .top_menu1{
         list-style-type: none;
@@ -125,4 +125,52 @@
     }
     ul li:hover .sub_menu{
         display: block;
-    }
+    } */
+header.container-fluid{
+    position: relative;
+    height:40px;
+    margin: 20px 0;
+    /* text-align: center; */
+   border-bottom:1px solid #868586;
+    
+}
+header.container-fluid>a{
+    text-align: left;
+    position: relative;
+    text-decoration:none;
+}
+header.container-fluid>div.row img{
+    position: absolute;
+    left:30%;
+    width:100px;
+    height:30px;
+    object-fit:cover;
+}
+
+.header-style .underline{
+    position: relative;
+    cursor: pointer;
+    padding-bottom: 22px;
+}
+.header-style span.underline::after{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 9;
+    width: 100%;
+    height: 2px;
+    background-color: #3C5946;
+    content: "";
+}
+header.container-fluid ul a:hover{
+	color: #3c5946;
+}
+header.container-fluid ol a:hover{
+ color: #A69B8D;
+
+}
+.fixed{
+	position:fixed;
+	top:0;
+}
+    
