--- a/SAW_GOOD/src/main/webapp/resources/css/funding/detail.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/funding/detail.css
@@ -148,7 +148,7 @@ section>.container{
     
 }
 /* 장바구니, 구매버튼 */
-tfoot button{
+section tfoot button{
     width: 100%;
     height: 50px;
     border: none;
@@ -159,19 +159,19 @@ tfoot button{
 }
 
 /* 상품 설명 메뉴*/
-ul.row>li{
+section ul.row>li{
     padding-top: 10px;
     text-align: center;
     font-size: 20px;
     
 }
-ul.row span{
+section ul.row span{
     position: relative;
     display: inline-block;
     height:40px;
     cursor: pointer;
 }
-span.underline::after{
+section span.underline::after{
     position: absolute;
     bottom: 0;
     left: 0;
