총명 #03 상품페이지 기능구현
현재 상품 목록을 불러오기 만함

--- a/SAW_GOOD/src/main/webapp/resources/css/admin/style.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/admin/style.css
@@ -8209,14 +8209,14 @@ h1, h2, h3, h4, h5,
 #sidebar {
   min-width: 270px;
   max-width: 270px;
-  background:url(../resources/images/sidebar.jpg);
-  color: black;
+  background:url(../admin/sidebar.jpg);
+  color: #fff;
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
   transition: all 0.3s;
   position: relative; }
   #sidebar .h6 {
-    color: #fff; }
+    color: black; }
   #sidebar.active {
     margin-left: -270px; }
     #sidebar.active .custom-menu {
