#3 회원정보 수정(패스워드,판매회원등급 추가) - 승원

--- a/SAW_GOOD/src/main/webapp/resources/css/personalInfo.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/personalInfo.css
@@ -203,6 +203,13 @@ div.main{
     outline: none;
 }
 
+
+.pass{
+	font-size:14px;
+	color:#51735D;
+	margin-top:100px;
+	margin-left:10px;
+}
 /* 에러 클래스 */
 span.error {
 	color: red;
