--- a/SAW_GOOD/src/main/webapp/resources/css/funding/list.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/funding/list.css
@@ -224,3 +224,53 @@ button{
     bottom: 0;
 }
 
+#category-nav{
+	padding: 0 50px;
+	margin: 50px 0;
+}
+#category-nav>.row{
+	height:400px;
+}
+#category-nav img{
+	height:400px;
+	object-fit:cover;
+}
+.text-container{
+	text-align:center;
+	position:relative;
+	padding-top:80px;
+	
+}
+.text-container p{
+	text-transform: uppercase;
+    letter-spacing: 0.115em;
+    font-size: 0.9375rem;
+    margin-bottom: 20px;
+}
+.text-container a{
+	font-size: 3.4375rem;
+	letter-spacing: 0em;
+	
+}
+.text-container h2{
+	margin: 30px 0;
+	line-height: 1.7;
+	font-weight: 400;
+}
+.text-container button{
+	text-decoration: none;
+    padding: 15px 70px;
+    border: 1px solid #808080;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 0.115em;
+    font-family: "Tw Cen W01 Light", sans-serif;
+    font-size: 14px;
+    font-size: 0.875rem;
+    transition: color ease 350ms, background ease 350ms;
+}
+.text-container button:hover{
+	color: white;
+	background: black;
+}
+	
