--- a/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
@@ -34,6 +34,7 @@
      margin:0 auto; */
  }
  section{
+ 	margin-top : 120px;
      position: relative;
  }
  ol, ul {
@@ -66,10 +67,42 @@ section>.container{
     border: 50px solid #F2E8DC;
     box-sizing: content-box;
 }
-
-/* .sideMenu{
-    margin: 50px 0px 0px 0px;
-} */
+.parallax-window{
+	height:400px;
+	text-align:center;
+	background: transparent;
+}
+.parallax-window h3{
+	position:relative;
+	top:45%;
+	font-size:1.7rem;
+	letter-spacing:1.25em;
+	color: white;
+}
+.selectStyle{
+	background:none;
+	border: 1px solid #9d9d9d;
+	border-radius:3px;
+	width:150px;
+	height:40px;
+}
+#search-area{
+	padding:0px;
+	margin-top:30px;
+	margin-bottom:30px;
+	text-align:center;
+} 
+#search-area button{
+	padding : 0 10px 0 10px;
+	background:  #51735D;
+	border:none;
+	border-radius:3px;
+	height:40px;
+	position: relative;
+	top : 0;
+	bottom : 0;
+	color : white;
+}
 .category{
     margin: 0;
     padding: 10px 0;
