--- a/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
@@ -202,3 +202,31 @@ div.boderbottom-Red{
 .auctionProduct{
     margin-bottom: 20px;
 }
+/* 페이지바 */
+#pageBar {
+	width: 100%;
+	margin: 40px 0 40px 0;
+	text-align: center;
+}
+
+#pageBar>a, #pageBar>span {
+	width: 40px;
+	height: 40px;
+	text-align: center;
+	line-height: 40px;
+	border: 1px solid #d5d5d5;
+	color: #999;
+	background-color: #fff;
+	margin: 0 2px;
+	position: relative;
+	font-size: 13px;
+	font-family: "YoonGothicPro760";
+	display: inline-block;
+	vertical-align: top;
+	padding: 0;
+}
+/* 페이지바 cpage span */
+#pageBar>span.cPage {
+	border: 1px solid #191919;
+	color: #191919;
+}
