#12 펀딩 참여만드는중 -sh

--- a/SAW_GOOD/src/main/webapp/resources/css/funding/detail.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/funding/detail.css
@@ -142,10 +142,14 @@ section>.container{
    height: 25px;
    background: none;
 }
-#sub-info input{
+/*  #sub-info input{
     width:50px;
     text-align: right;
-    
+     
+} */
+#input-price{
+	width:130px;
+	font-size:16px;
 }
 /* 장바구니, 구매버튼 */
 section tfoot button{
