--- a/SAW_GOOD/src/main/webapp/resources/css/product/detail.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/product/detail.css
@@ -173,7 +173,7 @@
         bottom: 100px;
         right: 30px;
         background-color: rgba(0,0,0,0.6);
-        color: white;
+        color: white !important; 
         text-decoration: none;
         transition: opacity 1s;
         opacity: 0;
@@ -243,7 +243,7 @@
     .write-btn, .write-btn:hover{
         padding: 8px 18px;
         font-size: 12px;
-        color: #fff;
+        color: #fff !important;
         background: #333;
         border: 1px solid #333;
         float: right;
