--- a/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
@@ -86,6 +86,14 @@ section>.container{
 	width:150px;
 	height:40px;
 }
+.selectStyle2{
+	font-size:13px;
+	background:none;
+	border: 1px solid #9d9d9d;
+	border-radius:3px;
+	width:150px;
+	height:25px;
+}
 #search-area{
 	padding:0px;
 	margin-top:30px;
@@ -105,6 +113,7 @@ section>.container{
 }
 .category{
     margin: 0;
+    margin-bottom: 15px;
     padding: 10px 0;
     list-style: none;
     border-top: 1px solid #E1E0E1;
