#9 상품 디테일 페이지 연결 및 결제페이지 api연동 및 기능 추가 - 승원

--- a/SAW_GOOD/src/main/webapp/resources/css/auction/auctionProductPage.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/auction/auctionProductPage.css
@@ -222,6 +222,7 @@
         font-weight: 600;
         color: #353535;
         font-size: 35px;
+        margin-right : 1%;
     }
     .productPrice{
         margin: 0px 0 0;
