--- a/SAW_GOOD/src/main/webapp/resources/css/payment/paymentPage.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/payment/paymentPage.css
@@ -95,9 +95,12 @@
         /* .container{
         padding: 0;
     } */
+    	section{
+    		margin-top:60px;
+    	}
         section>.container {
             /* padding: 20px; */
-            border: 70px solid #F2E8DC;
+            border: 50px solid #F2E8DC;
             box-sizing: content-box;
         }
 
@@ -379,7 +382,7 @@
             /* border-bottom: 1px solid rgb(218, 218, 218); */
             font-weight: normal;
             line-height: 50px;
-            vertical-align: top;
+            vertical-align: middle;
         }
 
         /* 주문자 (이름/연락처/이메일 테이블바디) */
@@ -401,7 +404,7 @@
         /* 이름 입력칸 크기 */
         .input-box-medium {
             display: inline-block;
-            padding: 7px 0;
+           
             width: 195px;
             position: relative;
         }
@@ -572,4 +575,16 @@
             user-select: none;
             vertical-align: middle;
         }
+        
+        /* 에러클래스 */
+input.error {
+	outline: red solid 1px !important;
+	margin-bottom: 10px;
+}
 
+span.error {
+	color: red;
+	font-size: 11px;
+	display : block;
+	/* padding-bottom:  !important;  */
+}
