# 펀딩 리스트, 디테일 오류 수정 , 글 작성 로직 구현 전- sh

--- a/SAW_GOOD/src/main/webapp/resources/css/funding/detail.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/funding/detail.css
@@ -65,11 +65,16 @@ section>.container{
 }
 /* 상품 설명 */
 #p-table h5{
-    font-size: 35px;
+    font-size: 20px;
     text-align: right;
+   position:relative;
 }
+#p-table h5>img{
+   position: relative;top:2px;
+}
+
 #p-table>table{
-    margin-top: 20px;
+    margin-top: 5px;
     border-top: 2px black solid;
     width: 100%;
 }
