--- a/SAW_GOOD/src/main/webapp/resources/css/auction/auctionProductPage.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/auction/auctionProductPage.css
@@ -250,10 +250,10 @@
     }
     /* 입찰 버튼 */
     .buy-btn{
-        width: 144px;
+        width: 150px;
         height: 47px;
         line-height: 47px;
-        font-size: 13px;
+        font-size: 15px;
         font-weight: 400;
         background:#51735D;
         color: #fff;
@@ -357,6 +357,9 @@
         text-transform: uppercase;
         line-height: 1.8;
         color : rgb(90, 90, 90);
+    }
+     #pro-info{
+        margin-bottom: 30px;
     }
     /* 상세정보 li 스타일 */
     #pro-info>li{
