#21 카테고리 선택시 리스트보기 완료 -sh
검색기능 남음

--- a/SAW_GOOD/src/main/webapp/resources/css/funding/list.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/funding/list.css
@@ -18,6 +18,7 @@ button,input[type='button'],input[type='submit']{
 	text-align:center;
 	background: transparent;
 	margin-bottom: 60px;
+	z-index:-1;
 }
 .parallax-window h3{
 	position:relative;
@@ -58,6 +59,7 @@ button,input[type='button'],input[type='submit']{
     padding: 20px;
     border: 50px solid #F2E8DC;
     box-sizing: content-box;
+    background-color:white;
 }
 .product-container:hover{
     box-shadow: rgba(149, 149, 149, 0.4) 5px 5px 10px 3px;
