--- a/SAW_GOOD/src/main/webapp/resources/css/auction/auctionWrite.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/auction/auctionWrite.css
@@ -507,4 +507,12 @@ div#main{
 	height : 400px;
 	
 }
-
+.images{
+    position: relative;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    padding-left : 5px;
+    padding-right: 5px;
+}
