--- a/SAW_GOOD/src/main/webapp/resources/css/product/detail.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/product/detail.css
@@ -1,3 +1,8 @@
+	.review-size{
+		width: 128px;
+	    height: 128px;
+	    min-width: 50px;
+	}
 	.qna-reply-container{
 		padding-bottom: 15px;
 		padding-left: 80px;
@@ -454,6 +459,8 @@
     }
     .review-container3{
         padding-top: 44px;
+        display: flow-root;
+        border-bottom: 1px solid #dadada;
     }
     .review-content{
         padding-top: 14px;
@@ -518,3 +525,31 @@
     .img-remove:hover{
         opacity: 0.7;
     }
+    /* 페이지바 */
+	#pageBar {
+		width: 100%;
+		margin: 40px 0 40px 0;
+		text-align: center;
+	}
+	
+	#pageBar>a, #pageBar>span {
+		width: 40px;
+		height: 40px;
+		text-align: center;
+		line-height: 40px;
+		border: 1px solid #d5d5d5;
+		color: #999;
+		background-color: #fff;
+		margin: 0 2px;
+		position: relative;
+		font-size: 13px;
+		font-family: "YoonGothicPro760";
+		display: inline-block;
+		vertical-align: top;
+		padding: 0;
+	}
+	/* 페이지바 cpage span */
+	#pageBar>span.cPage {
+		border: 1px solid #191919;
+		color: #191919;
+	}
