#21 경매 글쓰기 완료 및 프사경로 수정완료

--- a/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
@@ -138,7 +138,7 @@ button{
     border: none;
     background: none;
     outline: none;
-    position: absolute;
+   /*  position: absolute; */
     padding: 0;
     right: 0;
     bottom: 5px;
