--- a/SAW_GOOD/src/main/webapp/resources/css/funding/lastEnroll.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/funding/lastEnroll.css
@@ -1,4 +1,40 @@
 @charset "UTF-8";
+/* 상세페이지 헤더 */
+#detail-header{
+    width: 100%; 
+    height: 200px; 
+    text-align: center;
+    display: table;
+    padding: 0;
+    margin-bottom: 30px;
+    overflow: hidden;
+    position: relative;
+ }
+ 
+ #detail-header h1{
+     font-size: 36px;
+    position: relative;   
+ }
+ #detail-header i{
+     font-size: 16px;
+     display: table-row;
+     height: 30px;
+ }
+ 
+.bg-image {
+    filter: blur(5px);
+    /* Full height */
+    top:-20px;
+    left:-10px;
+    height: 120%;
+    width: 120%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    z-index: -1;
+  }
+
 #style{
 	vertical-align:middle;
 }
@@ -124,9 +160,9 @@ input[name="totalprice"]
 	width:130px;
 	font-size:16px;
 }
-/* 행 추가 삭제버튼 */
+/* 장바구니, 구매버튼 */
 section tfoot button:first-child{
-    width: 100%;
+    width: 49%;
     height: 30px;
     border: 1px solid #51735D;
     border-radius: 5px;
@@ -134,13 +170,14 @@ section tfoot button:first-child{
     
 }
 section tfoot button:last-child{
-    width: 100%;
+    width: 49%;
     height: 30px;
     border: 1px solid #555555;
     border-radius: 5px;
     color:#555555;
     
 }
+
 
 
 /* 상품 설명 메뉴*/
