#22 프사 기본사진 및 경매 입찰완료 분기처리 완료 - 승원

--- a/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/auction/auctionPage.css
@@ -243,3 +243,21 @@ div.boderbottom-Red{
 .auctionProduct:hover{
 	box-shadow: rgba(149, 149, 149, 0.4) 5px 5px 10px 3px;
 }
+/* 글쓰기 버튼 */
+.enroll-container{
+	display: block;
+    /* border-bottom: solid 1px #E1E0E1; */
+    position: relative;
+    padding: 0 10px;
+}
+.inputred{
+	width:100%;
+	height:30px;
+	border: 1px solid  #E1E0E1;
+	outline:none;
+	background-color:white;
+	margin-bottom:5px;
+	border-radius:3px;
+	color:#ee987c;
+	
+}
