--- a/SAW_GOOD/src/main/webapp/resources/css/auction/auctionProductPage.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/auction/auctionProductPage.css
@@ -492,4 +492,19 @@
     color:white;
     outline: none;
 }
-  
+  .images{
+    position: relative;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    padding-left : 5px;
+    padding-right: 5px;
+}
+  div#main{
+	display:inline-block;
+	border : 1px solid #eee;
+	width : 500px;
+	height : 400px;
+	
+}
