#87 별점과 로그인성공 메세지 지우기 및 mypage 구현

--- a/SAW_GOOD/src/main/webapp/resources/css/common/footer.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/common/footer.css
@@ -52,3 +52,9 @@
             line-height: 14px;
             float: left;
         }
+        .ft-cs li{
+        	list-style-type: none;
+        }
+        .ft-cs li a:hover{
+        	color :#F2E8DC;
+        }
