--- a/SAW_GOOD/src/main/webapp/resources/css/product/detail.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/product/detail.css
@@ -64,6 +64,7 @@
     .bigImg{
         max-width: 500px;
         cursor: pointer;
+        width: 100%;
     }
     .record_container{
         display: flex;
