--- a/SAW_GOOD/src/main/webapp/resources/css/login/login.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/login/login.css
@@ -1,3 +1,14 @@
+	.my_modal .welcome-msg{
+		font-size: 16px;
+    	margin-bottom: 20px;
+    	font-weight: bold;
+	}
+	.my_modal .prof img{
+		border-radius: 50%;
+	}
+	.my_modal .prof{
+		margin-bottom: 20px;
+	}
 	.my_modal{
         float: right;
         width: 400px;
@@ -58,6 +69,30 @@
         background-color: rgb(41,51,70);
         color: white;
 
+    }
+    #logined button{
+        display: block;
+        width: 100%;
+        height: 40px;
+        border: none;
+        font-size: 14px;
+        margin: 30px 0;
+        
+    }
+    #buttonCart{
+        background-color: rgb(41,51,70);
+        color: white;
+    }
+    #buttonHistory{
+    	background-color: #0059ab;
+    	color: white;
+    }
+    .history-container{
+    	display: none;
+    	list-style-type: none;
+    }
+    .history-container li{
+    	padding: 7px 0;
     }
     #buttonJoin{
         display: block;
