--- a/SAW_GOOD/src/main/webapp/resources/css/funding/detail.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/funding/detail.css
@@ -17,8 +17,9 @@ section>.container{
  }
  
  #detail-header h1{
-     font-size: 36px;
-    position: relative;   
+     font-size: 30px;
+    position: relative;  
+    color: #dedfe1; 
  }
  #detail-header i{
      font-size: 16px;
@@ -56,12 +57,19 @@ section>.container{
 .img-container>.arrow:hover{
     cursor: pointer;
 }
+.mainImg{
+	height:700px;
+	width: 100%;
+}
 .images{
     position: relative;
     object-fit: cover;
-    width: 100%;
-    height: 100%;
     z-index: -1;
+}
+.subImg{
+	position: relative;
+	width: 100%;
+	height:100%;
 }
 /* 상품 설명 */
 #p-table h5{
@@ -160,11 +168,12 @@ section>.container{
 section tfoot button{
     width: 100%;
     height: 50px;
-    border: none;
     border-radius: 5px;
+    color:#51735D;
 }
 #buy-btn{
-    background-color: #51735D;
+    background-color: white;
+    border: #51735D 1px solid;
 }
 
 /* 상품 설명 메뉴*/
