# 34 펀딩 css수정 -sh

--- a/SAW_GOOD/src/main/webapp/resources/css/funding/list.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/funding/list.css
@@ -306,4 +306,8 @@ button,input[type='button'],input[type='submit']{
 	color: white;
 	background: black;
 }
+.spanStyle{
+	display: inline-block;
+	padding:10px;
+}
 	
