--- a/SAW_GOOD/src/main/webapp/resources/css/personalInfo.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/personalInfo.css
@@ -175,7 +175,7 @@ div.main{
     height: 35px;
     border: 0;
     border-radius: 7px;
-    background-color: rgb(238, 152, 124);
+    background-color: #51735D;
     color:white;
     outline: none;
 }
@@ -186,7 +186,7 @@ div.main{
     height: 35px;
     border: 0;
     border-radius: 7px;
-    background-color: #51735D;
+    background-color: #rgb(238, 152, 124);
     color:white;
     outline: none;
 }
