--- a/SAW_GOOD/src/main/webapp/resources/css/login/login.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/login/login.css
@@ -62,7 +62,7 @@
         height: 40px;
         border: none;
         font-size: 14px;
-        margin: 30px 0;
+        margin: 20px 0;
         
     }
     #buttonLogin{
@@ -76,7 +76,7 @@
         height: 40px;
         border: none;
         font-size: 14px;
-        margin: 30px 0;
+        margin: 20px 0;
         
     }
     #buttonCart{
@@ -100,7 +100,7 @@
         height: 40px;
         border: none;
         font-size: 14px;
-        margin: 30px 0;
+        margin: 20px 0;
         background-color: black;
         color: white;
     }
@@ -115,3 +115,14 @@
         height: 100%;
         width: 2500px;
     }
+    #deleteAccount{
+    
+    	display: block;
+        width: 100%;
+        height: 40px;
+        border: none;
+        font-size: 14px;
+        margin: 20px 0;
+        background-color: #D9CDBF;
+        color: black;
+    }	
