--- a/SAW_GOOD/src/main/webapp/resources/css/product/productList.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/product/productList.css
@@ -1,4 +1,18 @@
 /* 승원 스타일 */
+	.parallax-window{
+		height:400px;
+		text-align:center;
+		background: transparent;
+		margin-bottom: 60px;
+		z-index:-1;
+	}
+	.parallax-window h3{
+		position:relative;
+		top:45%;
+		font-size:1.7rem;
+		letter-spacing:1.25em;
+		color: white;
+	}
     div{
         /* border: 1px solid black; */
     }
