#123 마이페이지 화면 css적용

--- a/SAW_GOOD/src/main/webapp/resources/css/login/login.css
+++ b/SAW_GOOD/src/main/webapp/resources/css/login/login.css
@@ -17,6 +17,7 @@
         background-color: rgb(223, 230, 221);
         text-align: center;
         opacity: 0.9;
+        overflow: auto;
     }
     .login_Xbutton{
         position: absolute;
